samples/_failures_safe/1761428572_b54515_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5ea69fe.c:174:1: error: expected identifier or ‘(’ at end of input
  174 | int
      | ^~~
